--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <style>
     .main {
-        border: 1px solid;
+        border: 1px solid rgb(218, 218, 218);
         width: 100vw;
         height: 100vh;
         padding-bottom: 100px;
         background-color: rgb(236, 235, 235);
+        overflow: hidden;
     }
 
     .head {
@@ -30,8 +31,9 @@
         margin: auto;
         background-color: rgb(7, 7, 7);
         border-radius: 10px;
-        /* border: 5px solid #868686; */
+        border: 5px solid #c2c1c1;
         color: rgb(196, 195, 195);
+         box-shadow: 1px 5px 10px 0 rgb(83, 83, 83);
     }
 
     .image {
@@ -41,16 +43,17 @@
     }
 
     .third{
-         border: 1px solid rgb(161, 159, 159);
-         box-shadow: 1px 4px 2px 0 rgb(155, 154, 154);
+         border: 3px solid rgb(209, 208, 208);
+         box-shadow: 1px 5px 10px 0 rgb(180, 180, 180);
         width: 80vw;
         height: 40vh;
         margin: auto;
         border-radius: 10px;
-         /* background: -webkit-linear-gradient(#333333, #757575);
+    }
+    #here{
+        background: -webkit-linear-gradient( #3a3a3a, rgb(3, 51, 61));
         -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent; */
-
+        -webkit-text-fill-color: transparent;
     }
 
     .password {
@@ -66,7 +69,8 @@
     #but{
         border: none;
         outline: none;
-        background: #6a1ef7;
+        /* background: #6a1ef7; */
+        background-color: rgb(5, 93, 116);
         color: #fff;
         width: 400px;
         height: 60px;
@@ -80,17 +84,17 @@
     <div class="main">
         <h1 class="head">ONLINE PASSWORD GENERATOR</h1>
         <div class="first">
-            <h1> &nbsp;&nbsp; Let LastPass generate your strong passwords,<br> &nbsp;&nbsp; so you don’t have to.</h1>
-            <h2> &nbsp;&nbsp; Create and store your passwords, digital records, <br> &nbsp;&nbsp; and secure notes to
-                safeguard your entire digital life.</h2>
+            <h1> &nbsp;&nbsp; Let LastPass generate your strong passwords,<br> &nbsp;&nbsp; so you don’t have to.</h1><br>
+            <h3> &nbsp;&nbsp; Create and store your passwords, digital records, <br> &nbsp;&nbsp; and secure notes to
+                safeguard your entire digital life.</h3>
             <div class="image"> <img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5fKRWz3wDdlVTz4bEmeel8U_l7aFSxOdMkA&s"
                     alt="" width="330px"></div>
         </div> <br><br>
         <div class="third">
-            <h1 style="text-align: center;">GENERATE YOUR PASSWORD HERE</h1><br>
+            <h1 id="here" style="text-align: center;">GENERATE YOUR PASSWORD HERE</h1><br>
         <div class="password">
-            <h1 class="fst"> welcome</h1>
+            <h1 class="fst" style="color: gray;"> CLICK TO GENERATE</h1>
             <button id="but">Press</button>
         </div>
         </div>
